# SongPullHobby

./: .env.example  .gitignore  README.md  SYNC_POLICY.md  pyproject.toml  setup.py
songpull_hobby/: __init__.py  cli.py  config.py  db.py  spotify.py  youtube.py
tests/: test_cli.py  test_compliance.py  test_config.py  test_db.py  test_youtube.py
