[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "songpull-hobby"
version = "0.1.0"
description = "Sync Spotify playlist tracks and save matching YouTube links."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "rich>=13.7.1",
    "typer>=0.12.5",
    "urllib3<2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
songpull-hobby = "songpull_hobby.cli:app"

[tool.setuptools]
packages = ["songpull_hobby"]

[tool.pytest.ini_options]
testpaths = ["tests"]
